# Triangles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.cpp  common.hpp  dynamic_triangles.cpp  geometry.cpp  geometry.hpp  main.cpp  scene.cpp  scene.hpp  static_triangles.cpp  tests.cpp
.github/workflows/: push.yml
collisions/: CMakeLists.txt  geometry.cpp  geometry.hpp  scene.cpp  scene.hpp  tests.cpp
renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  visualizer.cpp  visualizer.hpp  window.cpp  window.hpp
shaders/: shader.frag  shader.vert
